--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,4 +49,5 @@ jobs:
         IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/weatherrepo:latest
         echo "IMAGE_URI=$IMAGE_URI"
         docker build -t $IMAGE_URI .
-        docker push $IMAG
+        docker push $IMAGE_URI
+        echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV  # CDK で利用可能にする
