--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,20 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1️⃣ コードチェックアウト
+    # 1 コードチェックアウト
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    # 2️⃣ Node.js 環境セットアップ
+    # 2️ Node.js 環境セットアップ
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '20'
         cache: 'npm'
 
-    # 3️⃣ weatherSearch: 依存関係インストール & ビルド
+    # 3️ weatherSearch: 依存関係インストール & ビルド
 #    - name: Build App
 #      working-directory: ./weatherSearch
 #      run: |
@@ -31,21 +31,20 @@ jobs:
 #        npm run build 
 #  こちらウェザーサーチにTSを使ってないから必要なし
 
-    # 4️⃣ AWS 認証
+    # 4️ AWS 認証
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-1  role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-        
+        aws-region: ap-northeast-1
 
-    # 5️⃣ ECR ログイン
+    # 5️ ECR ログイン
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    # 6️⃣ Docker ビルド & プッシュ
+    # 6️ Docker ビルド & プッシュ
     - name: Build and push Docker image
       working-directory: ./weatherSearch
       run: |
